{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 14,
  "lineage": "b615268b-10a6-a1cc-9a88-2641ce6c9b39",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:065857490736:internet-gateway/igw-0432325400f4779a6",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-02de50d1c17f92672"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-02de50d1c17f92672"
                ]
              }
            ],
            "id": "igw-0432325400f4779a6",
            "internet_gateway_id": "igw-0432325400f4779a6",
            "owner_id": "065857490736"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:065857490736:vpc/vpc-02de50d1c17f92672",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-03e4e671c071b4f63",
            "default_route_table_id": "rtb-01447e4f180ea8b92",
            "default_security_group_id": "sg-0322b9d125db9faa7",
            "dhcp_options_id": "dopt-16b3f472",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": false,
            "force_destroy": false,
            "id": "vpc-02de50d1c17f92672",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01447e4f180ea8b92",
            "owner_id": "065857490736",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "v2ray",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d76e3264f111b10",
            "association_id": "eipassoc-08021a9f099b6aeac",
            "domain": "vpc",
            "id": "eipalloc-01d76e3264f111b10",
            "instance": "i-0fb92b7c91666f8ff",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-07eb4213afc9ac2c2",
            "private_dns": "ip-172-31-255-89.ap-northeast-1.compute.internal",
            "private_ip": "172.31.255.89",
            "public_dns": "ec2-52-196-114-110.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.196.114.110",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.v2ray",
            "aws_iam_role.v2ray",
            "aws_instance.v2ray",
            "aws_key_pair.kcul",
            "aws_security_group.v2ray",
            "aws_subnet.v2ray",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "v2ray",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e668b41786fecce6",
            "arn": "arn:aws:ec2:ap-northeast-1:065857490736:instance/i-0fb92b7c91666f8ff",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "v2ray-role20230808024753176400000004",
            "id": "i-0fb92b7c91666f8ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kcul20230808024745742100000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07eb4213afc9ac2c2",
            "private_dns": "ip-172-31-255-89.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.255.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:065857490736:key/a988f2bc-f543-438e-9778-94faad89a757",
                "throughput": 125,
                "volume_id": "vol-0415ae16299f371f3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "v2ray20230808024752006000000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028138621e286648d",
            "tags": {
              "Name": "v2ray"
            },
            "tags_all": {
              "Name": "v2ray"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "v2ray"
            },
            "vpc_security_group_ids": [
              "sg-0ca2a08423fe1aefa"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.v2ray",
            "aws_iam_role.v2ray",
            "aws_key_pair.kcul",
            "aws_security_group.v2ray",
            "aws_subnet.v2ray",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "v2ray",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:065857490736:security-group/sg-0ca2a08423fe1aefa",
            "description": "v2ray traffic",
            "egress": [],
            "id": "sg-0ca2a08423fe1aefa",
            "ingress": [],
            "name": "v2ray20230808024752006000000003",
            "name_prefix": "v2ray",
            "owner_id": "065857490736",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02de50d1c17f92672"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all traffic out",
            "from_port": 0,
            "id": "sgrule-2600628693",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ca2a08423fe1aefa",
            "security_group_rule_id": "sgr-0848d59c03ceea80e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.v2ray"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow 80 in",
            "from_port": 80,
            "id": "sgrule-339693782",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ca2a08423fe1aefa",
            "security_group_rule_id": "sgr-017e60550033fe61d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.v2ray"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "120.35.235.91/32"
            ],
            "description": "allow ssh from local",
            "from_port": 22,
            "id": "sgrule-1282168290",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ca2a08423fe1aefa",
            "security_group_rule_id": "sgr-0913dd88276b296a3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.v2ray"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow 80 in",
            "from_port": 80,
            "id": "sgrule-1794159182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0ca2a08423fe1aefa",
            "security_group_rule_id": "sgr-00676598b8fd8a85f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.v2ray"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "v2ray",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:065857490736:subnet/subnet-028138621e286648d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.31.255.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028138621e286648d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065857490736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "V2ray"
            },
            "tags_all": {
              "Name": "V2ray"
            },
            "vpc_id": "vpc-02de50d1c17f92672"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}